--- a/ACW/ACW3.cfg
+++ b/ACW/ACW3.cfg
@@ -1,5 +1,5 @@
 //
-// time: Mon May 07 18:46:00 2018
+// time: Mon May 07 22:05:08 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
@@ -113,7 +113,7 @@
 //
 // node Image[1]:
 // depth: value = 24
-// window: position = (0.0000,0.0000), size = 0.5000x0.9417
+// window: position = (0.0021,0.0287), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_1"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [8.5 8.5 8.5]
@@ -136,7 +136,7 @@
 //
 // node Image[2]:
 // depth: value = 24
-// window: position = (0.0000,0.0000), size = 0.5000x0.9417
+// window: position = (0.0021,0.0287), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_2"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [8.5 8.5 8.5]
@@ -159,15 +159,15 @@
 //
 // node Image[3]:
 // depth: value = 24
-// window: position = (0.5000,0.0213), size = 0.5000x0.9417
+// window: position = (0.0000,0.0213), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_3"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [8.5 8.5 8.5]
-// input[6]: defaulting = 0, value = [-1.36016 23.3148 115.417]
+// input[6]: defaulting = 0, value = [-17.2794 17.5972 113.384]
 // input[7]: defaulting = 0, value = 58.0846
 // input[8]: defaulting = 0, value = 1906
 // input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [0.0928957 0.987382 -0.128249]
+// input[10]: defaulting = 0, value = [0.379813 0.92497 0.0131261]
 // input[11]: defaulting = 1, value = 29.9998
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
@@ -182,7 +182,7 @@
 //
 // node Image[4]:
 // depth: value = 24
-// window: position = (0.5000,0.0213), size = 0.5000x0.9417
+// window: position = (0.0000,0.0213), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_4"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [8.5 8.5 8.5]
