--- a/ACW/ACW4.cfg
+++ b/ACW/ACW4.cfg
@@ -1,5 +1,5 @@
 //
-// time: Mon May 07 18:46:16 2018
+// time: Mon May 07 22:05:18 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
@@ -14,7 +14,7 @@
 // input[1]: defaulting = 0, value = { [0.0 0.69473684] [0.53459119 0.50526316] [0.53459119 0.15789474] [1.0 0.0] }
 // input[2]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
 // input[3]: defaulting = 0, value = { [0.0 0.26315789] [1.0 1.0] }
-// input[4]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
+// input[4]: defaulting = 0, value = { [0.0 0.24719101] [1.0 1.0] }
 // input[5]: defaulting = 0, value = "Colormap_5"
 // input[7]: defaulting = 1, value = 0.0079512848
 // input[8]: defaulting = 1, value = 0.27386948
@@ -22,7 +22,7 @@
 // input[12]: defaulting = 0, value = { 0.0079512848 0.27386948 }
 // input[17]: defaulting = 0, value = 0.0079512848
 // input[18]: defaulting = 0, value = 0.27386948
-// window: position = (0.0234,0.3148), size = 0.1690x0.4167
+// window: position = (0.0255,0.3435), size = 0.1690x0.4167
 //
 // node Colormap[6]:
 // input[1]: defaulting = 0, value = { [0.0 0.69473684] [0.53459119 0.50526316] [0.53459119 0.15789474] [1.0 0.0] }
@@ -38,21 +38,35 @@
 // input[18]: defaulting = 0, value = 0.27386948
 // window: position = (0.0234,0.3148), size = 0.1690x0.4167
 //
+// node Colormap[7]:
+// input[1]: defaulting = 0, value = { [0.0 0.666667] [1.0 0.0] }
+// input[2]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
+// input[3]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
+// input[4]: defaulting = 0, value = { [0.0 1.0] [1.0 1.0] }
+// input[5]: defaulting = 0, value = "Colormap_7"
+// input[7]: defaulting = 1, value = 0.0079512848
+// input[8]: defaulting = 1, value = 0.27386948
+// input[9]: defaulting = 1, value = 20
+// input[12]: defaulting = 0, value = { 0.0079512848 0.27386948 }
+// input[17]: defaulting = 0, value = 0.0079512848
+// input[18]: defaulting = 0, value = 0.27386948
+// window: position = (8.5331,30.3398), size = 8.5331x30.3398
+//
 // interactor StringList[1]: num_components = 1, value = { "Basic3D.net", "Basic2D.net", "Gridded_2D_1var_notseries.net", "Gridded_2D_2ormorevar_notseries.net", "Gridded_3D_1var_notseries.net", "Gridded_3D_2ormorevar_notseries.net", "UnGridded_2D_1var_notseries.net", "UnGridded_2D_2ormorevar_notseries.net", "UnGridded_3D_1var_notseries.net", "UnGridded_3D_2ormorevar_notseries.net", "FacesLoopsEdges.net" }
 // instance: panel = 0, x = 5, y = 5, style = List Editor, vertical = 1, size = 208x199
 //
 // node Image[4]:
 // depth: value = 24
-// window: position = (0.5021,0.0500), size = 0.5000x0.9417
+// window: position = (0.0000,0.0000), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_4"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [-26.8883 104.499 400.044]
-// input[6]: defaulting = 0, value = [-389.671 2171.01 -3533.33]
+// input[6]: defaulting = 0, value = [-2076.66 -2539.91 3346.08]
 // input[7]: defaulting = 0, value = 2389.02
 // input[8]: defaulting = 0, value = 1906
 // input[9]: defaulting = 0, value = 0.512
-// input[10]: defaulting = 0, value = [0.150866 0.880788 0.448833]
-// input[11]: defaulting = 1, value = 30.0
+// input[10]: defaulting = 0, value = [-0.68393 0.711212 0.162537]
+// input[11]: defaulting = 1, value = 29.9999
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
@@ -66,7 +80,7 @@
 //
 // node Image[5]:
 // depth: value = 24
-// window: position = (0.5000,0.0213), size = 0.5000x0.9417
+// window: position = (0.0000,0.0000), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_5"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [-26.8883 104.499 400.044]
@@ -76,6 +90,29 @@
 // input[9]: defaulting = 0, value = 0.512
 // input[10]: defaulting = 0, value = [0.408992 0.853558 -0.322744]
 // input[11]: defaulting = 1, value = 30.0001
+// input[12]: defaulting = 0, value = 0
+// input[14]: defaulting = 0, value = 1
+// input[15]: defaulting = 1, value = "none"
+// input[16]: defaulting = 1, value = "none"
+// input[17]: defaulting = 1, value = 1
+// input[18]: defaulting = 1, value = 1
+// input[19]: defaulting = 0, value = 0
+// input[29]: defaulting = 1, value = 0
+// input[41]: defaulting = 0, value = "rotate"
+// internal caching: 1
+//
+// node Image[6]:
+// depth: value = 24
+// window: position = (0.0068,0.0852), size = 0.1703x0.4833
+// input[1]: defaulting = 0, value = "Image_6"
+// input[4]: defaulting = 0, value = 1
+// input[5]: defaulting = 0, value = [-27 104 400]
+// input[6]: defaulting = 0, value = [1746.47 617.3 -2010.58]
+// input[7]: defaulting = 0, value = 1627.18
+// input[8]: defaulting = 0, value = 640
+// input[9]: defaulting = 0, value = 0.75
+// input[10]: defaulting = 0, value = [0.314262 0.854696 0.413199]
+// input[11]: defaulting = 1, value = 29.9999
 // input[12]: defaulting = 0, value = 0
 // input[14]: defaulting = 0, value = 1
 // input[15]: defaulting = 1, value = "none"
