--- a/ACW/ACW5/ACW5.cfg
+++ b/ACW/ACW5/ACW5.cfg
@@ -1,10 +1,8 @@
 //
-// time: Thu May 10 22:51:25 2018
+// time: Fri May 11 01:42:42 2018
 //
 // version: 3.2.0 (format), 4.4.4 (DX)
 //
-// Message Window:
-// window: position = (0.1370,0.6435), size = 0.1594x0.2194
 //
 // panel[0]: position = (0.0047,0.0565), size = 0.0977x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
@@ -33,49 +31,49 @@
 // panel[4]: position = (0.0089,0.1139), size = 0.0977x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
-// workspace: width = 0, height = 0
+// workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
 // panel[5]: position = (0.0047,0.0565), size = 0.0977x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
-// workspace: width = 0, height = 0
+// workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
 // panel[6]: position = (0.0068,0.0852), size = 0.0977x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
-// workspace: width = 0, height = 0
+// workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
 // panel[7]: position = (0.0047,0.0565), size = 0.0977x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
-// workspace: width = 0, height = 0
+// workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
 // panel[8]: position = (0.0047,0.0565), size = 0.0977x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
-// workspace: width = 0, height = 0
+// workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
 // panel[9]: position = (0.0047,0.0565), size = 0.0977x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
-// workspace: width = 0, height = 0
+// workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
 // panel[10]: position = (0.0047,0.0565), size = 0.0977x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
-// workspace: width = 0, height = 0
+// workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
 // panel[11]: position = (0.0047,0.0565), size = 0.0977x0.4167, startup = 1, devstyle = 1
 // title: value = Control Panel
 //
-// workspace: width = 0, height = 0
+// workspace: width = 500, height = 500
 // layout: snap = 0, width = 50, height = 50, align = NN
 //
 // node Colormap[1]:
@@ -132,15 +130,15 @@
 // input[30]: defaulting = 0, value = {"Day", "Time"}
 // input[36]: defaulting = 0, value = 1
 // input[41]: defaulting = 0, value = "pick"
-// input[43]: defaulting = 0, value = { 1.0 32.0 61.0 92.0 122.0 153.0 183.0 214.0 245.0 275.0 306.0 336.0 }
+// input[43]: defaulting = 0, value = { 1.0 32.0 61.0 92.0 122.0 153.0 183.0 214.0 245.0 275.0 306.0 336.0 366.0 }
 // input[44]: defaulting = 0, value = { 0.0 12.0 24.0 36.0 48.0 60.0 72.0 84.0 96.0 108.0 120.0 132.0 144.0 156.0 168.0 180.0 192.0 204.0 216.0 228.0 240.0 252.0 264.0 276.0 288.0 }
-// input[46]: defaulting = 0, value = {"January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"}
+// input[46]: defaulting = 0, value = {"January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December", ""}
 // input[47]: defaulting = 0, value = {"00:00", "01:00", "02:00", "03:00", "04:00", "05:00", "06:00", "07:00", "08:00", "09:00", "10:00", "11:00", "12:00", "13:00", "14:00", "15:00", "16:00", "17:00", "18:00", "19:00", "20:00", "21:00", "22:00", "23:00", "24:00"}
 // internal caching: 1
 //
 // node Image[8]:
 // depth: value = 24
-// window: position = (0.5000,0.0213), size = 0.5000x0.9417
+// window: position = (0.0000,0.0000), size = 0.5000x0.9417
 // input[1]: defaulting = 0, value = "Image_8"
 // input[4]: defaulting = 0, value = 1
 // input[5]: defaulting = 0, value = [1353.72 274.678 0]
